# citadel

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
crates/citadel-cli/: Cargo.toml
crates/citadel-consensus/: Cargo.toml
crates/citadel-consensus/src/: convergence.rs  lib.rs  threshold.rs  validity.rs
crates/citadel-crdt/: Cargo.toml
crates/citadel-dht/: Cargo.toml
crates/citadel-dht/src/: entry.rs  lib.rs  peer.rs  routing.rs  state.rs
crates/citadel-integration-tests/: Cargo.toml
crates/citadel-lens/: Cargo.toml
crates/citadel-lens/src/: admin_cli.rs  admin_socket.rs  api.rs  convergence_test.rs  cvdf.rs  error.rs  lib.rs  main.rs  mesh.rs  node.rs  proof_of_latency.rs  pvdf.rs  storage.rs  vdf_race.rs  ws.rs
crates/citadel-lens/src/models/: category.rs  content_item.rs  content_types.rs  metadata.rs  mod.rs  release.rs
crates/citadel-logging/: Cargo.toml
crates/citadel-metrics/: Cargo.toml
crates/citadel-protocols/: Cargo.toml
crates/citadel-protocols/src/: coordinator.rs  error.rs  lib.rs  spore_sync.rs
crates/citadel-spore/: Cargo.toml
crates/citadel-spore/src/: lib.rs
crates/citadel-topology/: Cargo.toml
crates/citadel-topology/benches/: topology_bench.rs
crates/citadel-topology/src/: hex.rs  lib.rs  neighbors.rs  spiral.rs  spiral3d.rs
crates/citadel-transfer/: Cargo.toml
crates/citadel-transfer/src/: lib.rs  streaming.rs  transport.rs  types.rs
crates/citadel-utils/: Cargo.toml
crates/citadel-vis/: Cargo.toml
crates/citadel-vis/src/: events.rs  lib.rs  playback.rs  server.rs  simulation.rs
crates/citadel-vis/static/: index.html
crates/citadel-wasm/: Cargo.toml
crates/citadel-wgpu/: Cargo.toml
crates/citadel-wgpu/src/: camera.rs  lib.rs  mesh_data.rs  renderer.rs  traffic.rs
crates/citadel-wgpu/src/shaders/: line.wgsl  point.wgsl
docs/: CONSTITUTIONAL_P2P.md  MESH_PROTOCOL.md
k8s/: lens-deployment.yaml
papers/: 01-two-generals-in-citadel.md  02-spore-sync.md  03-spiral-topology.md  04-protocol-of-theseus.md  05-broadcast.md  06-constitutional-p2p.md  07-convergence.md  08-cvdf.md  09-emergent-omniscience.md  10-failure-detection.md  11-flp-bypass.md  12-proof-of-latency.md  13-topology.md  14-two-hop-knowledge.md  15-vdf-race.md
proofs/: CitadelProofs.lean  lake-manifest.json  lakefile.lean
proofs/CitadelProofs/: Broadcast.lean  CVDF.lean  Constitutional.lean  Convergence.lean  EmergentOmniscience.lean  FLPBypass.lean  FailureDetectorElimination.lean  ProofOfLatency.lean  Spiral.lean  Spiral3D.lean  Spore.lean  Topology.lean  Transfer.lean  TwoHopKnowledge.lean  VdfRace.lean
scripts/: lens-dev.sh  run-5-nodes.sh
