[package]
name = "citadel-dht"
version.workspace = true
edition = "2021"
description = "Distributed hash table for Citadel mesh"
license.workspace = true

[dependencies]
citadel-topology = { path = "../citadel-topology" }
blake3 = { workspace = true }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
bincode = "1.3"

[dev-dependencies]
