[package]
name = "citadel-spore"
version = "0.1.0"
edition = "2021"
description = "SPORE: Succinct Proof of Range Exclusions - Information-theoretically optimal sync protocol"
license = "AGPL-3.0-or-later"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"

[dev-dependencies]
