[package]
name = "citadel-wgpu"
version = "0.1.0"
edition = "2021"
description = "High-performance wgpu visualization for Citadel mesh topology"
license = "AGPL-3.0-or-later"

[[bin]]
name = "citadel-wgpu"
path = "src/bin/citadel-wgpu.rs"

[dependencies]
# Graphics
wgpu = "24"
winit = "0.30"
pollster = "0.4"

# Math & data
bytemuck = { version = "1", features = ["derive"] }
glam = "0.29"

# Citadel
citadel-topology = { path = "../citadel-topology" }

# Gamepad
gilrs = "0.11"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Benchmarks will be added after initial implementation
